[package]
name = "ps-mmap"
version = "0.1.0-13"
edition = "2021"
description = "Easy memory mapping"
license = "GPL-3.0-or-later"

[dependencies]
memmap2 = "0.9.5"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
thiserror = "2.0.12"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
