[package]
name = "ps-mmap"
version = "0.1.0-14"
edition = "2021"
description = "Easy memory mapping"
documentation = "https://docs.rs/ps-mmap"
homepage = "https://github.com/prokopschield/ps-mmap"
repository = "https://github.com/prokopschield/ps-mmap"
license = "GPL-3.0-or-later"

[dependencies]
memmap2 = "0.9.9"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
thiserror = "2.0.17"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
